--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,3 +14,4 @@ jobs:
           DATAVERSE_DATASET_DOI: doi:10.70122/FK2/5Y9C1J
           GITHUB_DIR: post_cache
           DELETE: False
+          replace: true
