--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Send repo to Dataverse 
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Upload to Dataverse with file replacement
         uses: IQSS/dataverse-uploader@v1.6
         with:
           DATAVERSE_TOKEN: ${{secrets.DATAVERSE_TOKEN}}
