--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,5 +12,5 @@ jobs:
           DATAVERSE_TOKEN: ${{secrets.DATAVERSE_TOKEN}}
           DATAVERSE_SERVER: https://demo.dataverse.org
           DATAVERSE_DATASET_DOI: doi:10.70122/FK2/5Y9C1J
-          GITHUB_DIR: post_cache
+          GITHUB_DIR: post_files
           
