--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,5 +13,6 @@ jobs:
           DATAVERSE_SERVER: https://demo.dataverse.org
           DATAVERSE_DATASET_DOI: doi:10.70122/FK2/5Y9C1J
           replace: true
+          PUBLISH: True
           
           
